--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,6 +3,13 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+on:
+  push:
+    branches:
+      - hosting
+  pull_request:
+    branches:
+      - master
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
@@ -14,3 +21,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_RIGHTSTARTMONTESSORI_EBCE0 }}'
           projectId: rightstartmontessori-ebce0
+      
