--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      # set credentials
+      - name: set credentials
+        run: echo "GOOGLE_APPLICATION_CREDENTIALS=$(cat <<EOF
+        C:\Users\nicole\Downloads\rightstartmontessori-ebce0-firebase-adminsdk-qhvwe-3fa6de41a7.json
+        EOF
+        )"
       # download copy of repository
       - name: Checkout code
         uses: actions/checkout@v3
@@ -28,7 +34,7 @@ jobs:
         if: success()
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_RIGHTSTARTMONTESSORI_EBCE0 }}'
+          # no firebase service account needed
           projectId: rightstartmontessori-ebce0
 
       - name: Update firebase-tools version
