--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Install latest firebase-tools
         run: npm install -g firebase-tools
 
+      #trying to add a login step
+      - name: Manual login
+        run: firebase login
+
       - name: Deploy to firebase hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         # run these steps if no errors
